--- a/Linkbrary/package.json
+++ b/Linkbrary/package.json
@@ -10,8 +10,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@parcel/transformer-sass": "^2.12.0",
+    "buffer": "^6.0.3",
     "bundler": "^0.8.0",
+    "events": "^3.3.0",
     "parcel": "^2.12.0",
-    "sass": "^1.71.1"
+    "process": "^0.11.10",
+    "sass": "^1.71.1",
+    "stream-browserify": "^3.0.0",
+    "util": "^0.12.5"
   }
 }
