--- a/weekly-mission/package.json
+++ b/weekly-mission/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "clipboard-copy": "^4.0.1",
     "dotenv": "^16.4.5",
     "react": "^18.2.0",
