--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
-  "name": "5-Weekly-Mission-ts",
-  "version": "0.0.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build"
-  },
-  "dependencies": {
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0"
-  },
-  "devDependencies": {
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "typescript": "^4.1.2",
-    "vite": "^1.0.0-rc.13",
-    "vite-plugin-react": "^4.0.0"
-  }
+    "name": "5-Weekly-Mission-ts",
+    "version": "0.0.0",
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc && vite build"
+    },
+    "dependencies": {
+        "react": "^17.0.0",
+        "react-dom": "^17.0.0",
+        "react-router": "^6.23.0",
+        "react-router-dom": "^6.23.0"
+    },
+    "devDependencies": {
+        "@types/moment": "^2.13.0",
+        "@types/react": "^17.0.0",
+        "@types/react-dom": "^17.0.25",
+        "@types/react-router-dom": "^5.3.3",
+        "typescript": "^4.1.2",
+        "vite": "^1.0.0-rc.13",
+        "vite-plugin-react": "^4.0.0"
+    }
 }
