Add: tsconfig baseurl추가

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,11 @@
   },
   "compilerOptions": {
     "esModuleInterop": true,
-    "jsx": "react"
+    "jsx": "react",
+    "baseUrl": "",
+    "paths": {
+      "@components/*": ["./src/components/*"],
+      "@assets/*": ["./src/assets/*"]
+    }
   }
 }
