Add: tsconfig, custom.d.ts 추가

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,11 @@
     "moduleResolution": "bundler",
     "allowJs": true,
     "esModuleInterop": true,
-    "jsx": "react"
+    "jsx": "react",
+    "baseUrl": "./",
+    "paths": {
+      "@components/*": ["./src/components/*"],
+      "@assets/*": ["./src/assets/*"]
+    }
   }
 }
