--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "sass": "^1.77.0"
   },
   "devDependencies": {
+    "@types/date-fns": "^2.6.0",
     "@types/node": "^20",
     "@types/react-dom": "^18",
     "eslint": "^8",
