--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@types/classnames": "^2.3.1",
     "classnames-ts": "^1.0.2",
     "next": "^13.5.6",
