--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/classnames": "^2.3.1",
     "classnames-ts": "^1.0.2",
     "next": "^13.5.6",
+    "prop-types": "^15.8.1",
     "react": "^18",
     "react-dom": "^18"
   },
