--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@svgr/webpack": "^8.1.0",
     "@types/classnames": "^2.3.1",
+    "axios": "^1.6.8",
     "classnames-ts": "^1.0.2",
     "next": "^13.5.6",
     "prop-types": "^15.8.1",
