--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
         "incremental": true,
         "moduleResolution": "node",
         "resolveJsonModule": true,
-        "isolatedModules": true
+        "isolatedModules": true,
+        "outDir": "./dist"
     },
     "include": ["global.d.ts", "**/*.ts", "**/*.tsx", "vite.config.js"],
     "exclude": ["node_modules"]
