--- a/weekly-mission/next-project/package.json
+++ b/weekly-mission/next-project/package.json
@@ -12,7 +12,8 @@
     "axios": "^1.6.8",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.51.4"
   },
   "devDependencies": {
     "@types/node": "^20.12.11",
