--- a/weekly-mission/next-project/tsconfig.json
+++ b/weekly-mission/next-project/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "ESNext",
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "typeRoots": ["./@types", "./node_modules/@types"],
     "types": [],
     "allowJs": false,
     "skipLibCheck": false,
@@ -18,7 +19,7 @@
     "baseUrl": "./",
     "paths": {
       "@components/*": ["src/components/*"],
-      "@api/*": ["pages/api/*"],
+      "@api/*": ["pages/service/*"],
       "@/styles/*": ["styles/*"]
     },
     "incremental": true
@@ -27,7 +28,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    "pages/api/fetchFolderLinksData.ts"
+    "pages/service/fetchFolderLinksData.ts"
   ],
   "exclude": ["node_modules"]
 }
