--- a/weekly/package.json
+++ b/weekly/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^14.2.3",
     "next": "14.2.3",
     "query-string": "^9.0.0",
     "react": "^18",
