--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "^13.5.6",
     "prop-types": "^15.8.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.51.4"
   },
   "devDependencies": {
     "@types/node": "^20",
