--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@
 
 # misc
 .DS_Store
+
+.env
 .env.local
 .env.development.local
 .env.test.local
@@ -21,3 +23,19 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# local env files
+.env*.local
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
