--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "^13.5.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.4",
     "sass": "^1.77.1",
     "styled-components": "^6.1.11"
   },
