--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.4",
     "sass": "^1.77.0"
   },
   "devDependencies": {
