--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/error-message": "^2.0.1",
     "axios": "^1.6.8",
     "classnames": "^2.5.1",
     "next": "^13.5.6",
