--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.4",
+    "react-icons": "^5.2.1",
     "react-popper": "^2.3.0",
     "sass": "^1.77.0"
   },
