--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-hook-form": "^7.51.4",
     "react-icons": "^5.2.1",
     "react-popper": "^2.3.0",
+    "react-query": "^3.39.3",
+    "react-transition-group": "^4.4.5",
     "sass": "^1.77.0"
   },
   "devDependencies": {
@@ -26,6 +28,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-transition-group": "^4.4.10",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
     "typescript": "^5"
